# nclock-background

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  run.sh
crates/nclock-background/: Cargo.toml
crates/nclock-background/src/: app.rs  lib.rs  main.rs  opengl.rs  output.rs  wayland.rs
crates/nclock-config/: Cargo.toml
crates/nclock-config/src/: lib.rs
crates/nclock-core/: Cargo.toml
crates/nclock-core/src/: lib.rs  renderer.rs  state.rs
crates/nclock-core/src/canvas/: glyph_cache.rs  mod.rs  render.rs  size.rs
crates/nclock-screensaver/: Cargo.toml
crates/nclock-screensaver/src/: lib.rs  main.rs
nix/: overlay.nix  package.nix  source.nix
nix/flake/: overlay.nix  package.nix
nix/flake/dev/: devshell.nix  flake.nix
src/: app.rs  lib.rs  main.rs  renderer.rs  state.rs
