[package]
name = "nclock-screensaver"
version = "0.1.0"
edition = "2024"

[dependencies]
femtovg = { version = "0.25.1", default-features = false, features = ["textlayout"] }
glutin = { version = "0.32.3", default-features = false, features = ["egl", "wayland"] }
glutin-winit = { version = "0.5.0", default-features = false, features = ["egl", "wayland"] }
winit = { version = "0.30.13", default-features = false, features = ["wayland"] }
