[package]
name = "nclock-background"
version.workspace = true
edition.workspace = true

[dependencies]
femtovg = { workspace = true }
glutin = { workspace = true }
time = { workspace = true }
wayland-backend = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-wlr = { workspace = true }
calloop = { workspace = true }
calloop-wayland-source = { workspace = true }
raw-window-handle = { workspace = true }

nclock-config = { path = "../nclock-config" }
nclock-core = { path = "../nclock-core" }
