[package]
name = "nclock-background"
description = "Fancy dynamic night clock wallpaper engine for Wayland compositors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
calloop = { workspace = true }
calloop-wayland-source = { workspace = true }
clap = { workspace = true }
femtovg = { workspace = true }
glutin = { workspace = true }
nix = { workspace = true }
raw-window-handle = { workspace = true }
time = { workspace = true }
wayland-backend = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols-wlr = { workspace = true }

nclock-config = { path = "../nclock-config" }
nclock-core = { path = "../nclock-core" }
