[package]
name = "nclock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
femtovg = { workspace = true }
time = { workspace = true }
iana-time-zone = { workspace = true }

nclock-config = { path = "../nclock-config" }
