[package]
name = "nclock-screensaver"
description = "Screensaver adapter and management process of night clock wallpaper engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap = { workspace = true }
